temp overflow fix

--- a/frontend/css/App.css
+++ b/frontend/css/App.css
@@ -5,6 +5,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
+  width: 100vw;
 }
 
 .chat-bot-wrapper {
@@ -12,7 +14,7 @@
   flex-direction: column;
   background: transparent;
   height: 75em;
-  width: 100vw;
+  width: 100%;
   align-items: center;
   justify-content: center;
   /* background-color: blueviolet; */
@@ -31,7 +33,7 @@
   width:99%;
   min-height: 10em;
   max-height: 74em;
-  overflow: scroll;
+  overflow-y: scroll;
   overflow-anchor: none;
   margin-bottom: auto;
 }
